# ircabot

./: .gitignore  CMakeLists.txt  README.md  config.example.conf  config.example.json  config_en.json  config_ru.json  ircbot.json  ircbot.pro  main.cpp  tcpsyncclient.cpp  tcpsyncclient.h
.github/workflows/: release-deb.yml
assets/: assets.qrc  live.js  style.css
cmake/: GenerateVersion.cmake
cmake/deb/: postinst  postrm  prerm
src/: Captcha.cpp  Captcha.h  CaptchaImage.cpp  CaptchaImage.h  Config.cpp  Config.h  IrcClient.cpp  IrcClient.h  LogCache.cpp  LogCache.h  LogStore.cpp  LogStore.h  Main.cpp  Render.cpp  Render.h  State.cpp  State.h  Util.cpp  Util.h  VoiceGate.cpp  VoiceGate.h  WebUi.cpp  WebUi.h  config.cpp  config.h  ircclient.cpp  ircclient.h  logstore.cpp  logstore.h  main.cpp  render.cpp  render.h  state.cpp  state.h  util.cpp  util.h  version.h  version.h.in  webui.cpp  webui.h
systemd/: ircabot.service  ircabot.service.in
tests/: file.json  json.cpp
